--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@progress/kendo-react-dropdowns": "^3.6.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.2.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
