--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@progress/kendo-react-dropdowns": "^3.6.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.1",
     "firebase": "^7.2.2",
     "react": "^16.11.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8"
