--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
