--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.11.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
+    "react-iframe": "^1.8.0",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "react-twitter-embed": "^3.0.3"
