--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.1",
     "firebase": "^7.2.2",
+    "jquery": "^3.4.1",
     "react": "^16.11.0",
+    "react-apexcharts": "latest",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
-    "react-twitter-embed": "^3.0.3",
-    "react-apexcharts": "latest"
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
